# app/Http/Controllers/AuthController.php
@@ -23,7 +23,7 @@ use Kami\Cocktail\Http\Resources\ProfileResource;
 
 class AuthController extends Controller
 {
-    #[OAT\Post(path: '/login', tags: ['Authentication'], summary: 'Authenticate user and get a token', requestBody: new OAT\RequestBody(
+    #[OAT\Post(path: '/auth/login', tags: ['Authentication'], summary: 'Authenticate user and get a token', requestBody: new OAT\RequestBody(
         required: true,
         content: [
             new OAT\JsonContent(ref: BAO\Schemas\LoginRequest::class),
@@ -56,7 +56,7 @@ class AuthController extends Controller
         return new TokenResource($token);
     }
 
-    #[OAT\Post(path: '/logout', tags: ['Authentication'], summary: 'Logout currently authenticated user')]
+    #[OAT\Post(path: '/auth/logout', tags: ['Authentication'], summary: 'Logout currently authenticated user')]
     #[OAT\Response(response: 204, description: 'Successful response')]
     public function logout(Request $request): JsonResponse
     {
@@ -67,7 +67,7 @@ class AuthController extends Controller
         return response()->json(status: 204);
     }
 
-    #[OAT\Post(path: '/register', tags: ['Authentication'], summary: 'Register a new user', requestBody: new OAT\RequestBody(
+    #[OAT\Post(path: '/auth/register', tags: ['Authentication'], summary: 'Register a new user', requestBody: new OAT\RequestBody(
         required: true,
         content: [
             new OAT\JsonContent(ref: BAO\Schemas\RegisterRequest::class),
@@ -101,7 +101,7 @@ class AuthController extends Controller
         return new ProfileResource($user);
     }
 
-    #[OAT\Post(path: '/forgot-password', tags: ['Authentication'], summary: 'Request a new user password', requestBody: new OAT\RequestBody(
+    #[OAT\Post(path: '/auth/forgot-password', tags: ['Authentication'], summary: 'Request a new user password', requestBody: new OAT\RequestBody(
         required: true,
         content: [
             new OAT\JsonContent(type: 'object', properties: [
@@ -128,7 +128,7 @@ class AuthController extends Controller
         abort(400);
     }
 
-    #[OAT\Post(path: '/reset-password', tags: ['Authentication'], summary: 'Reset user password', requestBody: new OAT\RequestBody(
+    #[OAT\Post(path: '/auth/reset-password', tags: ['Authentication'], summary: 'Reset user password', requestBody: new OAT\RequestBody(
         required: true,
         content: [
             new OAT\JsonContent(type: 'object', properties: [
@@ -166,7 +166,7 @@ class AuthController extends Controller
         abort(400, $status);
     }
 
-    #[OAT\Post(path: '/verify/{id}/{hash}', tags: ['Authentication'], summary: 'Confirm user account', parameters: [
+    #[OAT\Post(path: '/auth/verify/{id}/{hash}', tags: ['Authentication'], summary: 'Confirm user account', parameters: [
         new OAT\Parameter(name: 'id', in: 'path', required: true, description: 'Database id of a user', schema: new OAT\Schema(type: 'integer')),
         new OAT\Parameter(name: 'hash', in: 'path', required: true, description: 'Hash string sent to user email', schema: new OAT\Schema(type: 'string')),
     ], security: [])]
