# routes/api.php
@@ -50,11 +50,13 @@ if (config('bar-assistant.mail_require_confirmation') === true) {
 
 Route::get('/', [ServerController::class, 'index']);
 
-Route::post('login', [AuthController::class, 'authenticate'])->name('auth.login');
-Route::post('register', [AuthController::class, 'register']);
-Route::post('forgot-password', [AuthController::class, 'passwordForgot']);
-Route::post('reset-password', [AuthController::class, 'passwordReset']);
-Route::get('verify/{id}/{hash}', [AuthController::class, 'confirmAccount']);
+Route::prefix('auth')->group(function () {
+    Route::post('login', [AuthController::class, 'authenticate'])->name('auth.login');
+    Route::post('register', [AuthController::class, 'register']);
+    Route::post('forgot-password', [AuthController::class, 'passwordForgot']);
+    Route::post('reset-password', [AuthController::class, 'passwordReset']);
+    Route::get('verify/{id}/{hash}', [AuthController::class, 'confirmAccount']);
+});
 
 Route::prefix('server')->group(function () {
     Route::get('/version', [ServerController::class, 'version']);
